# social-twins

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_distribution_shift_sweep.sh  run_sample_selection_sweep.sh  sample_selection_sweep.sh
assets/: group.csv
docs/: ANALYSIS.md  DATA_PREPARATION.md  EXPERIMENTS.md  MODEL_TRAINING.md
src/scenetokens/: eval.py  model_analysis.py  model_metric_analysis.py  sample_selection.py  scenario_visualization.py  train.py
src/scenetokens/analysis/: __init__.py  model_analysis_utils.py  sample_selection_utils.py
src/scenetokens/analysis/scenario_visualizers/: visualizer.py  waymo.py  waymo_animated.py  waymo_causal.py  waymo_causal_animated.py
src/scenetokens/configs/: analysis.yaml  eval.yaml  model_analysis.yaml  model_metric_analysis.yaml  sample_selection.yaml  scenario_visualization.yaml  train.yaml
src/scenetokens/configs/analysis/: animated.yaml  causal.yaml  causal_animated.yaml  default.yaml  metrics.yaml  tokenization.yaml  trajpred.yaml
src/scenetokens/configs/callbacks/: classification.yaml  lr_monitor.yaml  trajpred.yaml
src/scenetokens/configs/dataset/: default.yaml  open_scenario.yaml  waymo.yaml  waymo_analysis.yaml
src/scenetokens/configs/debug/: profiler.yaml
src/scenetokens/configs/hydra/: default.yaml  disabled.yaml
src/scenetokens/configs/logger/: csv.yaml  many_loggers.yaml  mlflow.yaml  tensorboard.yaml  wandb.yaml
src/scenetokens/configs/model/: autobot.yaml  causal_scenetokens.yaml  default.yaml  safe_scenetokens.yaml  scenetokens.yaml  scenetokens_encoder.yaml  scenetokens_student.yaml  scenetokens_student_naive.yaml  scenetokens_teacher.yaml  scenetokens_teacher_unmasked.yaml  scenetransformer.yaml  wayformer.yaml
src/scenetokens/configs/paths/: default.yaml  ego_safeshift_causal.yaml  open_scenario.yaml  safeshift.yaml  safeshift_causal.yaml  scenarionet.yaml  waymo.yaml  waymo_causal_labeled.yaml  waymo_causal_unlabeled.yaml
src/scenetokens/configs/scenario/: nuscenes.yaml  waymo.yaml  waymo_encoder.yaml
src/scenetokens/configs/trainer/: default.yaml
src/scenetokens/configs/visualization/: viz_animated.yaml  viz_causal.yaml  viz_causal_animated.yaml  viz_static.yaml  viz_trajpred.yaml
src/scenetokens/datasets/: base_dataset.py  open_sceanrio_dataset.py  scenarionet_dataset.py  scenarionet_types.py  waymo_dataset.py
src/scenetokens/models/: autobot.py  base_model.py  causal_scenetokens.py  safe_scenetokens.py  scenetokens.py  scenetokens_encoder.py  scenetokens_student.py  scenetokens_teacher.py  scenetokens_teacher_unmasked.py  scenetransformer.py  wayformer.py
src/scenetokens/models/components/: attention.py  common.py  cross_attention.py  perceiver_io.py  self_attention.py
src/scenetokens/models/criterion/: __init__.py  base_criterion.py  causal_scenetokens.py  classification.py  encoder_only.py  reconstruction.py  safe_scenetokens.py  scenetokens.py  student.py  teacher.py  trajpred.py
src/scenetokens/models/scene/: decoder.py  factorized_embedder.py  perceiver_embedder.py
src/scenetokens/models/scene/tokenizers/: naive_tokenizer.py  quantized_tokenizer.py
src/scenetokens/schemas/: __init__.py  agent_centric_scenario.py  output_schemas.py
src/scenetokens/utils/: __init__.py  constants.py  data_utils.py  instantiators.py  metric_utils.py  model_analysis_utils.py  model_metric_analysis_utils.py  pylogger.py  rich_utils.py  sample_selection_utils.py  utils.py
src/scenetokens/utils/scenario_visualizers/: base_visualizer.py  scenario.py  scenario_animated.py  scenario_causal.py  scenario_causal_animated.py  scenario_trajpred.py  unitraj_viz_utils.py
src/scripts/: causal_labels_pb2.py  create_causal_benchmark.py  create_ego_safeshift_benchmark.py  find_causal_agent_scenarios.py  process_causal_agents_labels.py  resplit_safeshift.py  verify_agent_ids.py  verify_no_leakage.py  verify_safeshift_causal.py  visualize_agent_score_distribution.py  waymo_data_processing.py  waymo_data_selection.py
