[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scene-tokens"
version = "0.1.0"
requires-python = ">3.10, <3.13"
authors = [
  {name = "Ingrid Navarro", email = "inavarro@stackav.com"},
]
readme = "README.md"

dependencies = [
  # keep-sorted start
  "easydict>=1.13",
  "einops>=0.8.1",
  "google>=3.0.0",
  "h5py>=3.13.0",
  "hydra-colorlog>=1.2.0",
  "hydra-core>=1.3.2",
  "joblib>=1.5.1",
  "matplotlib>=3.10.3",
  "mlflow>=3.1.1",
  "natsort>=8.4.0",
  "numpy>=2.1.3",
  "omegaconf>=2.3.0",
  "opencv-python>=4.11.0.86",
  "pandas>=2.2.3",
  "pillow>=11.2.1",
  "pydantic-tensor>=0.2.0",
  "pydantic>=2.11.7",
  "pyrootutils>=1.0.4",
  "pytorch-lightning>=2.5.1.post0",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "scenario-characterization",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "tensorboard>=2.19.0",
  "tensorflow>=2.19.0",
  "torch>=2.7.0",
  "tqdm>=4.67.1",
  "typing-extensions>=4.14.0",
  "umap-learn>=0.5.7",
  "vector-quantize-pytorch>=1.27.7",
  "wandb>=0.19.11",
  # keep-sorted end
]


[project.optional-dependencies]
dev = [
  "pre-commit>=4.2.0",
  "pyright>=1.1.405",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
]
exclude = ["docs", "scripts", "tmp", "samples", "assets"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]
packages = ["src/scenetokens"]

[tool.hatch.metadata]
# Include package data in the wheel
include-package-data = true

[tool.hatch.build.sources]
src = "src"

[tool.hatch.build.include]
"scenetokens" = ["**/*.yaml"]

[tool.ruff]
lint.extend-select = [
  # keep-sorted start
  "I",
  # keep-sorted end
]
lint.ignore = [
  # keep-sorted start
  "C901",    # too complex
  "COM812",  # flake8-commas - missing-trailing-comma
  "D100",    # pydocstyle - missing docstring in public module
  "D101",    # pydocstyle - missing docstring in public class
  "D102",    # pydocstyle - missing docstring in public method"
  "D103",    # pydocstyle - missing docstring in public function
  "D104",    # pydocstyle - missing docstring in public package
  "D105",    # pydocstyle - missing docstring in magic method
  "D107",    # pydocstyle - missing docstring in init
  "D203",    # pydocstyle - blank line required before class docstring
  "D205",    # pydocstyle - blank line required before class docstring
  "D415",    # pydocstyle - first line should end with a period
  "ERA001",  # eradicate - remove commented-out code
  "F841",    # local variable assigned but not used (since pyright reportUnusedVariable is enabled)
  "FIX002",  # flake8-fixme - line contains todo
  "S101",    # use of assert detected
  "S301",    # pickle can be unsafe to deserialize
  "T20",     # flake8-print - disallow prints
  "TC001",   # move application import into a type-checking block
  "TC002",   # move import into a type-checking block
  "TD",      # ignore all TODO rules, re-enable later.
  "TD002",   # flake8-todos - missing author in todo
  "TD003",   # flake8-todos - missing issue link on line following todo
  "W293",    # blank line contains whitespace
  # keep-sorted end
]
lint.select = ["ALL"]
lint.fixable = ["ALL"]
lint.unfixable = [
  # Disable the autofixes for the following so that stuff doesn't get deleted when formatting on save
  # keep-sorted start
  "ERA001", # eradicate - remove commented-out code
  "F401",   # pyflakes - unused import
  "F841",   # pyflakes - unused variable
  "RUF100", # unused-noqa
  # keep-sorted end
]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    # Files ported from other repos, minimally changed.
    "src/scenetokens/utils/data_utils.py",
    "src/scenetokens/utils/scenario_visualizers/unitraj_viz_utils.py",
    "src/scenetokens/utils/scenario_visualizers/scenario_trajpred.py",
    "src/scenetokens/models/components",
    "src/scenetokens/datasets/base_dataset.py",
    "src/scripts/waymo_data_processing.py",
    "src/scripts/causal_labels_pb2.py",
]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
runtime-evaluated-decorators = ["pydantic.dataclasses.dataclass"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.flake8]
max-line-length = 120

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
exclude = [
  # keep-sorted start
  "**/__pycache__",
  "src/scenetokens/datasets/base_dataset.py",
  "src/scenetokens/models/components",
  "src/scenetokens/utils/data_utils.py",
  "src/scenetokens/utils/instantiators.py",
  "src/scenetokens/utils/scenario_visualizers/scenario_trajpred.py",
  "src/scenetokens/utils/scenario_visualizers/unitraj_viz_utils.py",
  "src/scripts/causal_labels_pb2.py",
  "src/scripts/waymo_data_processing.py",
  "tmp/**",
  # keep-sorted end
]
ignore = ["tmp/**"]
typeCheckingMode = "strict"
deprecateTypingAliases = true              # Check for deprecated typing aliases

# Set to false, plan to re-enable
# keep-sorted start
enableTypeIgnoreComments = "error"           # Disable support for '# type: ignore' in favor of '# pyright: ignore'
reportAttributeAccessIssue = false         # Attribute access issue
reportCallIssue = false                    # Wrong number of args / invalid call
reportIncompatibleMethodOverride = false   # Subclass overrides with incompatible signature
reportMissingTypeArgument = false          # Generic used without type args (e.g., list vs list[int])
reportOptionalMemberAccess = false         # Accessing attribute on possibly None
reportUnknownArgumentType = false          # Argument type could not be inferred
reportUnknownMemberType = false            # Attribute exists but type is unknown
reportUnknownParameterType = false         # Parameter type could not be inferred
reportUnknownVariableType = false          # Variable type could not be inferred
reportUntypedBaseClass = false             # Inheriting from untyped base class
reportUnusedCallResult = false             # Disable check for call statements whose return value is not None and is not used.
reportUnusedVariable = false               # Disable check for unused variables
# keep-sorted end

# Set to "error"
# keep-sorted start
reportArgumentType = "error"               # Function call arg type mismatch
reportMissingParameterType = "error"       # Parameter missing explicit; using ruff ANN001
reportMissingTypeStubs = "error"           # Report Missing stubs
reportOperatorIssue = "error"              # No overloads match the provided argument
reportOptionalOperand = "error"            # Using arithmetic/logical op on possibly None
reportOptionalSubscript = "error"          # Indexing a possibly None value
reportPossiblyUnboundVariable = "error"    # Variable may be used before assignment
reportReturnType = "error"                 # Report return type
reportUnnecessaryComparison = "error"      # Comparison always true/false
# keep-sorted end

# Set to "none"
# keep-sorted start
reportInvalidTypeForm = "none"             # Invalid type expression (unsupported or malformed)
reportMissingImports = "none"              # Import cannot be resolved → runtime ImportError (TODO: resolve)
reportMissingModuleSource = "none"         # Module has stub but no source (informational only)
reportUntypedFunctionDecorator = "none"    # Decorator has no type info
# keep-sorted end
